syntax = "proto3";

option csharp_namespace = "GrpcGreeter";

package greet;

service GreeterService {
    rpc SayHello (HelloRequest) returns (HelloResponse);
}

message HelloRequest {
    string name = 1;
}

message HelloResponse {
    string message = 1;
}